@@ -1,0 +1,8 @@
+Title: mssql_tablespaces: It is now possible to define thresholds
+Level: 1
+Component: checks
+Version: 1.2.5i5
+Date: 1404833800
+Class: feature
+
+
